Add a profile for building with JDK9.